--- a/02-progress-steps/src/app/app.component.html
+++ b/02-progress-steps/src/app/app.component.html
@@ -2,6 +2,7 @@
   <div class="wrapper">
     <div class="progress-container">
       <div [style.width]="getProgress()" class="progress" id="progress"></div>
+      <div class="progress-way" id="progress-way"></div>
       <div class="circle active">1</div>
       <div class="circle">2</div>
       <div class="circle">3</div>
