--- a/02-progress-steps/src/app/app.component.sass
+++ b/02-progress-steps/src/app/app.component.sass
@@ -30,6 +30,14 @@ body
   transition: 0.4s ease
   z-index: -1
 
+.progress-way
+  position: absolute
+  background-color: $line-border-empty
+  height: 4px
+  transition: 0.4s ease
+  z-index: -2
+  width: 100%
+
 .circle
   @include center
   background-color: white
